--- a/android/src/main/res/layout/nfcview.xml
+++ b/android/src/main/res/layout/nfcview.xml
@@ -1,21 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-  xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   android:orientation="vertical"
+  android:background="@color/background"
   tools:context="com.jackbayliss.nfcreader.NfcCardReaderActivity">
 
+  <ImageView
+    android:id="@+id/close_button"
+    android:layout_width="60dp"
+    android:layout_height="60dp"
+    android:src="@drawable/close_24"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentEnd="true"
+    android:padding="8dp"/>
+
   <TextView
-    android:gravity="center"
+    android:layout_alignParentTop="true"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="36dp"
+    android:layout_marginStart="48dp"
+    android:layout_marginEnd="48dp"
+    android:layout_marginTop="128dp"
+    android:gravity="center"
     android:text="Tap your card on the NFC reader"
-    android:textSize="36sp"
-    android:textStyle="bold"
-  />
+    android:textSize="24sp"
+    android:textColor="#ffffff"
+    android:textStyle="bold" />
+  
+  <ImageView
+    android:id="@+id/nfc_image"
+    android:layout_width="128dp"
+    android:layout_height="128dp"
+    android:layout_centerInParent="true"/>
 
-</LinearLayout>
-
+</RelativeLayout>
